[package]
name = "lego-mosaic-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = "0.7.2"
boolvec = "0.2.6"
kd-tree = { version = "0.5.1", optional = true }
typenum = { version = "1.17.0", optional = true }
nalgebra-glm = { version = "0.18.0", optional = true }

[features]
default = ["kd-tree"]
kd-tree = ["dep:kd-tree", "dep:typenum"]
ldraw = ["dep:nalgebra-glm"]
