[package]
name = "lego-mosaic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boolvec = "0.2.6"
kd-tree = { version = "0.5.1", optional = true }
typenum = { version = "1.17.0", optional = true }
palette = { version = "0.7.3", optional = true }
image = { version = "0.24.7", optional = true }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"

[features]
default = ["palette"]
palette = ["dep:kd-tree", "dep:typenum", "dep:palette"]
image = ["dep:image"]
ldraw = []
